syntax = "proto3";

package common;
option go_package = "github.com/pachyderm/pachyderm/v2/src/internal/collection";

message TestItem {
  string id = 1;
  string value = 2;
  string data = 3;
}
